# jarvis-memory

./: .env.example  .gitignore  AGENT_RUNBOOK.md  CLIENT_INSTALL.md  HANDOFF_CONTRACT.md  LICENSE  README.md  claude_mcp_config.json.example  hooks.json.example  install_hooks.py  migrate_to_atlas.sh  pyproject.toml  setup.sh  setup_venv.sh
docs/eng/: api-runaway-postmortem.md
docs/eval/: 2026-04-26-A2-cross-encoder-rerank.md  A2-baseline-rerank-off.json  A2-rerank-on.json  stage5-spec.md  (+7 more)
hooks/: __init__.py  claude_code_precompact.py  claude_code_sessionstart.py  pre_compact.py  session_start.py  session_stop.py
jarvis_memory/: __init__.py  api.py  classifier.py  cli.py  compaction.py  config.py  conversation.py  doctor.py  embeddings.py  eval.py  graph.py  handoff.py  lifecycle.py  operation_context.py  orphans.py  pages.py  rooms.py  schema_v2.py  scoring.py  temporal.py  wake_up.py
launchagents/: INSTALL_COMPACTION_CRON.md  INSTALL_MINI.md  com.atlas.jarvis-compact-daily.plist  com.atlas.jarvis-compact-weekly.plist  com.atlas.minion-worker.plist
mcp_server/: __init__.py  server.py
plans/: longmemeval-phase9-ms-counting-recall.md  parallel-longmemeval-validation.md  production-readiness-public-launch-20260430.md
reports/: longmemeval-proof-20260430.md  longmemeval-raw-score-chart-20260430.html
scripts/: backfill_v2.py  client-install.sh  diagnose_q5.py  gen_eval_corpus.py  generate_launchagents.sh  generate_systemd_units.sh  migrate_to_bitemporal.py  migrate_to_v2.py  register_mcp.py  run_compaction.py  run_longmemeval.py  run_parallel_judge.py  run_parallel_targeted_validation.py  run_targeted_validation.py  upgrade.sh  verify_install.sh
systemd/: jarvis-compact-daily.service  jarvis-compact-daily.timer  jarvis-compact-weekly.service  jarvis-compact-weekly.timer  jarvis-minion-worker.service
tests/: conftest.py  test_agent_id_scoping.py  test_api_parity.py  test_classifier.py  test_classifier_routing.py  test_compaction.py  test_conversation.py  test_doctor.py  test_eval.py  test_graph.py  test_handoff_contract.py  test_lifecycle.py  test_mcp_parity.py  test_migrate_to_bitemporal.py  test_operation_context.py  test_orphans.py  test_package_metadata.py  test_pages.py  test_schema_v2.py  test_scoring.py  test_seen_as_of_filter.py  test_upgrade_script.py  test_wake_up_ordering.py
(+72 files in other folders)
