[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-memory"
version = "0.1.0"
description = "Graphiti-based memory system for Jarvis agent fleet — forked with MemClawz algorithms"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alex", email = "alex@edge-fund.io" },
]

dependencies = [
    "graphiti-core>=0.5",
    "neo4j>=5.0",
    "anthropic>=0.40",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # Vector search backend (ChromaDB + sentence-transformers). NOT pulled
    # in transitively by graphiti-core despite its own ChromaDB support —
    # jarvis_memory/embeddings.py imports both directly. Without these
    # declared, a cold `pip install -e .` leaves the EmbeddingStore falling
    # back to text-only search (logs "ChromaDB unavailable, falling back").
    # Pinned to major version we've tested end-to-end on Alex's Mini.
    "chromadb>=1.0,<2.0",
    "sentence-transformers>=3.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
jarvis-mcp = "mcp_server.server:main_sync"
jarvis = "jarvis_memory.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
